[package]
name = "solver"
version = "0.2.7"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
postflop-solver = {  path = "../postflop-solver", features = ["custom-alloc", "bincode"], default-features = false }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
